--- a/src/main/resources/templates/adminDashBoard/fragments/accountContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/accountContent.html
@@ -52,7 +52,7 @@
     <h2 th:text="${accNamePage}">Management <b>Account</b></h2>
 
     <div class="stats-container">
-        <div class="stats-card">
+        <div class="stats-card" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
             <div class="stats-icon bg-opacity-10 text-primary">
                 <i class="fa fa-desktop"></i>
             </div>
@@ -127,14 +127,14 @@
                 <div class="table-wrapper">
                     <div class="custom-tabs">
                         <ul class="nav nav-tabs" id="accountTabs" role="tablist">
-                            <li class="nav-item" role="presentation">
+                            <li class="nav-item" role="presentation" sec:authorize="hasRole('ADMIN')">
                                 <button class="nav-link active" id="admin-tab" data-bs-toggle="tab"
                                         data-bs-target="#admin" type="button" role="tab" data-role="1">
                                     <i class="bi bi-shield-check me-2"></i>Admin
                                 </button>
                             </li>
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link" id="instructor-tab" data-bs-toggle="tab"
+                                <button class="nav-link" th:classappend="${#authorization.expression('!hasRole(''ADMIN'')')} ? 'active'" id="instructor-tab" data-bs-toggle="tab"
                                         data-bs-target="#instructor" type="button" role="tab" data-role="2">
                                     <i class="bi bi-person-badge me-2"></i>Instructor
                                 </button>
@@ -150,7 +150,7 @@
                         <div class="tab-content p-0" id="accountTabsContent">
 
                             <!-- Admin Tab -->
-                            <div class="tab-pane fade show active" id="admin" role="tabpanel">
+                            <div class="tab-pane fade show active" id="admin" role="tabpanel" sec:authorize="hasRole('ADMIN')">
                                 <div class="table-responsive">
                                     <table class="table account-table text-center">
                                         <thead>
@@ -171,7 +171,7 @@
                             </div>
 
                             <!-- Instructor Tab -->
-                            <div class="tab-pane fade" id="instructor" role="tabpanel">
+                            <div class="tab-pane fade" id="instructor" role="tabpanel" th:classappend="${#authorization.expression('!hasRole(''ADMIN'')')} ? 'show active'">
                                 <div class="table-responsive">
                                     <table class="table account-table text-center">
                                         <thead>
@@ -271,7 +271,7 @@
                                 <div class="mb-3">
                                     <label class="form-label">Role</label>
                                     <select th:field="*{roleName}" class="form-select">Admin
-                                        <option th:value="Admin">Admin</option>
+                                        <option th:value="Staff">Staff</option>
                                     </select>
                                 </div>
                             </div>
