--- a/src/main/resources/templates/adminDashBoard/fragments/accountDetailContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/accountDetailContent.html
@@ -23,7 +23,7 @@
                     <!-- Profile picture -->
                     <div class="avatar avatar-xl mb-3">
                         <img class="avatar-img rounded-circle border border-white border-3 shadow"
-                             th:src="${userDetail.profilePicture}" alt="">
+                           th:src="${userDetail.profilePicture != null} ? ${userDetail.profilePicture} : '/img/undraw_profile.svg'" alt="">
                     </div>
 
                     <!-- Information START -->
@@ -126,6 +126,15 @@
                                 </td>
                                 <td th:text="${course.categoryName}">Programming</td>
                                 <td th:text="${course.courseLevel == null ? 'N/A' : course.courseLevel}">Beginner</td>
+                            </tr>
+                            <!-- Empty state -->
+                            <tr th:if="${#lists.isEmpty(userDetail.enrolledCourses)}">
+                                <td colspan="8" class="text-center align-middle py-5">
+                                    <div class="d-flex flex-column align-items-center justify-content-center">
+                                        <i class="fas fa-book fa-3x mb-3 opacity-50"></i>
+                                        <h5>No courses found</h5>
+                                    </div>
+                                </td>
                             </tr>
                             </tbody>
                         </table>
