--- a/src/main/resources/templates/adminDashBoard/fragments/editProfileContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/editProfileContent.html
@@ -22,7 +22,7 @@
                  style="width: 120px; height: 120px; object-fit: cover;">
             <img id="avatarPreview"
                  th:unless="*{avatarUrl} != null and *{avatarUrl} != ''"
-                 th:src="@{/assets/images/avatar/01.jpg}"
+                 th:src="@{/img/undraw_profile.svg}"
                  alt="Avatar" class="rounded-circle shadow"
                  style="width: 120px; height: 120px; object-fit: cover;">
         </div>
