--- a/src/main/resources/templates/adminDashBoard/fragments/courseMaintenanceContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/courseMaintenanceContent.html
@@ -261,7 +261,7 @@
                                 <input type="number" class="form-control" name="minEnrollments" placeholder="Min Enrollments" required>
                             </div>
                             <div class="col-md-3">
-                                <input type="number" class="form-control" name="maxEnrollments" placeholder="Max Enrollments" required>
+                                <input type="number" class="form-control" name="maxEnrollments" placeholder="Max Enrollments" >
                             </div>
                             <div class="col-md-3">
                                 <input type="number" class="form-control" name="maintenanceFee" placeholder="Maintenance Fee" required>
