--- a/src/main/resources/templates/adminDashBoard/fragments/courseTableRowContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/courseTableRowContent.html
@@ -26,9 +26,12 @@
                              <span th:case="'rejected'" class="badge bg-danger">
                                  <i class="fas fa-times"></i> Rejected
                              </span>
-                             <span th:case="'publish'" class="badge bg-secondary">
-                                <i class="fas fa-clock"></i> Publish
+                             <span th:case="'publish'" class="badge bg-success">
+                                 Publish
                             </span>
+                             <span th:case="'pending_block'" class="badge bg-danger">
+                                 <i class="fas fa-times"></i> Pending_Block
+                             </span>
                         </span>
         </td>
         <td>
@@ -39,7 +42,7 @@
                     <i class="fas fa-eye"></i>
                 </a>
                 <!-- Block Course Button -->
-                <button type="button" class="btn btn-danger-soft btn-round me-1 mb-1 mb-md-0" data-bs-toggle="modal" th:attr="data-bs-target='#blockCourseReasonModal' + ${course.courseId}" title="Block Course">
+                <button th:if="${course.status !='pending_block'}" type="button" class="btn btn-danger-soft btn-round me-1 mb-1 mb-md-0" data-bs-toggle="modal" th:attr="data-bs-target='#blockCourseReasonModal' + ${course.courseId}" title="Block Course">
                     <i class="fas fa-ban"></i>
                 </button>
             </div>
