--- a/src/main/resources/templates/homePage/fragments/profileSidebarFragment.html
+++ b/src/main/resources/templates/homePage/fragments/profileSidebarFragment.html
@@ -7,7 +7,7 @@
     <div class="offcanvas-body p-3 p-xl-0">
       <div class="bg-dark border rounded-3 p-3 w-100">
         <div class="list-group list-group-dark list-group-borderless collapse-list">
-          <a class="list-group-item" th:href="@{/profile}"><i class="bi bi-person me-2"></i>Profile</a>
+          <a sec:authorize="hasRole('USER')" class="list-group-item" th:href="@{/profile}"><i class="bi bi-person me-2"></i>Profile</a>
           <a class="list-group-item" th:href="@{/learning/my-courses}"><i class="bi bi-journal-bookmark me-2"></i>My Courses</a>
           <a class="list-group-item" th:href="@{/user/notifications}"><i class="bi bi-clock-history me-2"></i>Notification</a>
         </div>
